# OpenGLEngineCpp

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  app.cpp  glad.c
SubProjectTesting/: ConsoleApp3.csproj  ConsoleApp3.sln  LasHeader.cs  LasVariableLengthRecords.cs  LasZipDecompression.cs  Point10.cs  Program.cs
pointcloud/: large.las  large.laz  medium.las  medium.laz  small.las  small.laz
scripts/: fibonachi.lua  helloworld.lua  isprime.lua
shaders/: default.frag  default.vert  noLight.frag
src/: Camera.cpp  Camera.h  HSL.h  InputProcessing.cpp  InputProcessing.h  Light.h  LuaState.cpp  LuaState.h  Material.cpp  Material.h  ShaderStore.cpp  ShaderStore.h  Shadow.cpp  Shadow.h  Window.cpp  Window.h  World.cpp  World.h  crypto_rand.cpp  crypto_rand.h  uuid.h
src/algorithms/: introsort.cpp  introsort.h  sortbase.h
src/collections/: Node.h  OcTree.cpp  OcTree.h  QuadTree.cpp  QuadTree.h
src/colliders/: AABB.cpp  AABB.h  Collider.cpp  Collider.h  ColliderHandler.cpp  ColliderHandler.h  ConvexHull.cpp  ConvexHull.h  SphereCollider.cpp  SphereCollider.h  gjk.cpp  gjk.h  mesh.cpp  mesh.h
src/culling/: Frustum.h  Plane.h
src/ecs/: ecs_map.h
src/ecs/components/: base.h  physcis.h  physics.cpp  physics.h  transform.h
src/ecs/system/: base.h  physics.cpp  physics.h
src/ecs/systems/: base.h  collision.cpp  collision.h  physics.cpp
src/fileformats/: las.cpp  las.h
src/input/: Camera.cpp  Camera.h  InputProcessing.cpp  InputProcessing.h
src/objects/base/: GameObject.cpp  GameObject.h  GameObjectBase.cpp  GameObjectBase.h  Renderable.cpp  Renderable.h  SceneObject.h  SceneUpdatableObject.cpp  SceneUpdatableObject.h  Transform.h  Vertex.h
src/objects/combined/: TrackedBall.h
src/objects/curves/: BSpline.h  (+4 more)
src/shaders/: Material.cpp  Material.h  Shader.h  ShaderStore.cpp
src/windows/: particle.cpp  particle.h
(+7 files in other folders)
